--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <aspectj.version>1.9.21</aspectj.version>
-        <surefire.version>2.22.2</surefire.version>
+        <surefire.version>3.0.0-M7</surefire.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <allure.version>2.26.0</allure.version>
         <allure.maven.version>2.10.0</allure.maven.version>
