--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -106,6 +106,23 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>multi</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>4.19.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-devtools-v122</artifactId>
+            <version>4.19.1</version>
+        </dependency>
     </dependencies>
 
 </project>
